--- a/ShiftWorld/App/Resource.rc
+++ b/ShiftWorld/App/Resource.rc
@@ -118,7 +118,8 @@ Resource(engine/soundfont/GMGSx.sf2.zstdcmp)
 //	Siv3D App Resources (Your application resources here)
 //
 //////////////////////////////////////////////////////
-
+Resource(example/font/DotGothic16/DotGothic16-Regular.ttf)
+Resource(resource/player.png)
 
 
 /* examples 
